feat(api):add get all users api
