# swagger/swagger.yaml
@@ -709,6 +709,58 @@ paths:
 
   # User
 
+  /user/users:
+    get:
+      security:
+        - Authorization: []
+      summary: Retrieve all users
+      tags:
+        - User
+
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+                    description:
+                  error:
+                    type: boolean
+                    example: false
+                  status:
+                    type: integer
+                    example: 200
+                  message:
+                    type: string
+                    example: All users retrieved successfully
+                  data:
+                    type: object
+                    properties:
+                      'users:':
+                        type: array
+                        items:
+                          type: object
+                          '$ref': '#/components/schemas/AuthResponse'
+
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                '$ref': '#/components/schemas/BadRequestResponse'
+
+        '500':
+          description: 500 Internal Server Error
+          content:
+            application/json:
+              schema:
+                '$ref': '#/components/schemas/ServerErrorResponse'
+
   /user/{userId}/follow:
     put:
       security:
